# voca-py

./: .env.example  .gitignore  alembic.ini  config.py  pyproject.toml
commands/: create_user.py
core/: auth.py  container.py  database.py  db.py  db_session.py  generics.py  logging.py  models.py  open_api.py  opentelemetry.py
migrations/: env.py
migrations/versions/: 0ec2b4088e58_drop_unscramble_word_exercises_table.py  5d899f02f9f0_initial_schema.py  69fff129170a_add_phone_column_to_users.py
src/: main.py
src/entry/: auth.py  container.py  db.py  models.py
src/flashcard/application/: contracts.py
src/flashcard/application/command/: add_session_flashcards.py  bulk_delete_flashcards.py  create_flashcard.py  create_session.py  generate_flashcards.py  merge_decks.py  rate_flashcards.py  regenerate_flashcards.py  update_flashcard.py
src/flashcard/application/dto/: context.py  deck_details_read.py  flashcard_group.py  flashcard_read.py  general_rating.py  owner_deck_read.py  rating_stats.py  resolved_deck.py
src/flashcard/application/exercise/: flashcard_summary_factory.py  iflashcard_exercise_factory.py  (+2 more)
src/flashcard/domain/: enum.py  value_objects.py
src/shared/: enum.py  models.py
src/shared/exercise/: contracts.py
src/shared/flashcard/: contracts.py
src/shared/user/: iuser.py  iuser_facade.py
src/shared/util/: cache.py  hash.py
src/shared/value_objects/: exercise_entry_id.py  flashcard_deck_id.py  flashcard_id.py  integer_id.py  language.py  story_id.py  user_id.py
src/study/domain/: enum.py  value_objects.py
src/user/domain/: contracts.py
src/user/infrastructure/: models.py
templates/: hugerte.html
tests/: asserts.py  client.py  conftest.py  factory.py  pytest.ini
tests/fixtures/: api_response.py
(+137 files in other folders)
